--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "prismadb",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^22.5.0",
-    "base64-arraybuffer": "^1.0.2",
-    "nodemon": "^3.1.4",
-    "prisma": "^5.19.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.20.0",
-    "@supabase/supabase-js": "^2.45.4",
-    "axios": "^1.7.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-xml-bodyparser": "^0.3.0",
-    "multer": "^1.4.5-lts.1",
-    "uuid": "^10.0.0"
-  }
+	"name": "prismadb",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node server.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/node": "^22.5.0",
+		"base64-arraybuffer": "^1.0.2",
+		"nodemon": "^3.1.4",
+		"prisma": "^5.19.0",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.5.4"
+	},
+	"dependencies": {
+		"@prisma/client": "^5.20.0",
+		"@supabase/supabase-js": "^2.45.4",
+		"axios": "^1.7.7",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
+		"express": "^4.19.2",
+		"express-xml-bodyparser": "^0.3.0",
+		"multer": "^1.4.5-lts.1",
+		"uuid": "^10.0.0"
+	}
 }
