--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"express": "^4.19.2",
 		"express-xml-bodyparser": "^0.3.0",
 		"multer": "^1.4.5-lts.1",
+		"nodemailer": "^6.9.16",
 		"uuid": "^10.0.0"
 	}
 }
