--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"express": "^4.19.2",
 		"express-xml-bodyparser": "^0.3.0",
 		"multer": "^1.4.5-lts.1",
-		"nodemailer": "^6.9.16",
+		"nodemailer": "^6.10.0",
+		"twilio": "^5.5.1",
 		"uuid": "^10.0.0"
 	}
 }
