--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
 	"dependencies": {
 		"@prisma/client": "^5.20.0",
 		"@supabase/supabase-js": "^2.45.4",
-		"axios": "^1.7.7",
+		"axios": "^1.8.4",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"express-xml-bodyparser": "^0.3.0",
 		"multer": "^1.4.5-lts.1",
 		"nodemailer": "^6.10.0",
+		"sharp": "^0.34.1",
 		"twilio": "^5.5.1",
 		"uuid": "^10.0.0"
 	}
