--- a/package.json
+++ b/package.json
@@ -19,16 +19,21 @@
 		"typescript": "^5.5.4"
 	},
 	"dependencies": {
+		"@hapi/boom": "^10.0.1",
 		"@prisma/client": "^5.20.0",
 		"@supabase/supabase-js": "^2.45.4",
+		"@whiskeysockets/baileys": "^6.7.16",
 		"axios": "^1.8.4",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"express-xml-bodyparser": "^0.3.0",
+		"jimp": "^0.16.13",
 		"multer": "^1.4.5-lts.1",
 		"nodemailer": "^6.10.0",
-		"sharp": "^0.34.1",
+		"qrcode": "^1.5.3",
+		"qrcode-terminal": "^0.12.0",
+		"sharp": "^0.32.6",
 		"twilio": "^5.5.1",
 		"uuid": "^10.0.0"
 	}
